API add and update processing of course for user
